# kbd

./: .gitignore  AGENTS.md  ATTRIBUTION.md  CHANGELOG.md  Cargo.toml  DESIGN.md  DOCUMENTATION_PLAN.md  INTERRUPT_HOLD_PLAN.md  Justfile  PLAN.md  README.md  TAP_HOLD_CACHE_PLAN.md  deny.toml  release-plz.toml
.agents/skills/codspeed-profiling/: SKILL.md
.github/workflows/: bench.yml  codspeed.yml  deny.yml  docs.yml  lint.yml  release.yml  semver.yml  test.yml  zizmor.yml
.pi/: PLAN.md
.pi/prompts/: build.md
archive/v0/: PLAN.md
archive/v0/examples/: config_file.rs  conflict_detection.rs  grab.rs  key_state.rs  multi.rs  options.rs  tap_hold.rs
archive/v0/src/: backend.rs  config.rs  device.rs  error.rs  events.rs  hotkey.rs  key.rs  key_state.rs  listener.rs  manager.rs  mode.rs  tap_hold.rs
archive/v0/src/listener/: device.rs  dispatch.rs  forwarding.rs  hotplug.rs  io.rs  sequence.rs  state.rs
archive/v0/src/manager/: handles.rs
archive/v0/src/mode/: builder.rs  controller.rs  registry.rs
archive/v0/tests/: integration.rs
crates/kbd/: Cargo.toml  README.md
crates/kbd-bench/: Cargo.toml  README.md
crates/kbd-bench/benches/: dispatch.rs  hotkey.rs
crates/kbd-bench/src/: lib.rs
crates/kbd-core/: Cargo.toml
crates/kbd-core/examples/: introspection.rs  layers.rs  matcher.rs  string_parsing.rs
crates/kbd-core/src/: action.rs  binding.rs  error.rs  introspection.rs  key.rs  key_state.rs  layer.rs  lib.rs  matcher.rs  winit.rs
crates/kbd-crossterm/: Cargo.toml  README.md
crates/kbd-crossterm/examples/: crossterm.rs
crates/kbd-crossterm/src/: lib.rs
crates/kbd-crossterm/tests/: public_api.rs
crates/kbd-derive/: Cargo.toml  README.md
crates/kbd-derive/src/: lib.rs
crates/kbd-egui/: Cargo.toml  README.md
crates/kbd-egui/examples/: egui.rs
crates/kbd-egui/src/: lib.rs
crates/kbd-egui/tests/: public_api.rs
crates/kbd-evdev/: Cargo.toml  README.md
crates/kbd-evdev/examples/: evdev.rs
crates/kbd-evdev/src/: convert.rs  devices.rs  error.rs  forwarder.rs  lib.rs
crates/kbd-evdev/tests/: public_api.rs
crates/kbd-global/: Cargo.toml  README.md
crates/kbd-global/examples/: global.rs
crates/kbd-global/src/: backend.rs  binding_guard.rs  engine.rs  error.rs  events.rs  handle.rs  lib.rs  manager.rs
crates/kbd-global/src/backend/: evdev.rs  portal.rs
crates/kbd-global/src/engine/: command.rs  devices.rs  forwarder.rs  held_keys.rs  runtime.rs  sequence.rs  tap_hold.rs  types.rs  wake.rs
crates/kbd-global/tests/: action_binding.rs  error_type.rs  facade_reexports.rs  key_types.rs  layer_definition.rs  layer_stack.rs  manager_handle.rs  public_api.rs  runtime_reexports.rs  string_parsing.rs
crates/kbd-global/tests/utils/: mod.rs
crates/kbd-iced/: Cargo.toml  README.md
crates/kbd-iced/examples/: iced.rs
crates/kbd-iced/src/: lib.rs
crates/kbd-iced/tests/: public_api.rs
crates/kbd-portal/: Cargo.toml  README.md
crates/kbd-portal/src/: lib.rs
crates/kbd-tao/: Cargo.toml  README.md
crates/kbd-tao/examples/: tao.rs
crates/kbd-tao/src/: lib.rs
crates/kbd-tao/tests/: public_api.rs
crates/kbd-winit/: Cargo.toml  README.md
crates/kbd-winit/examples/: winit.rs
crates/kbd-winit/src/: lib.rs
crates/kbd-winit/tests/: public_api.rs
crates/kbd-xkb/: Cargo.toml  README.md
crates/kbd-xkb/src/: lib.rs
crates/kbd/benches/: benchmarks.rs
crates/kbd/examples/: dispatcher.rs  introspection.rs  layers.rs  matcher.rs  string_parsing.rs
crates/kbd/src/: action.rs  binding.rs  device.rs  dispatcher.rs  error.rs  hotkey.rs  introspection.rs  key.rs  key_state.rs  layer.rs  lib.rs  matcher.rs  policy.rs  sequence.rs  tap_hold.rs
crates/kbd/src/dispatcher/: aliases.rs  layers.rs  query.rs  registry.rs  resolve.rs  sequence.rs  tap_hold.rs  throttle.rs  timeout.rs
crates/kbd/tests/: public_api.rs  serde.rs
crates/keybound/: Cargo.toml
crates/keybound/src/: action.rs  backend.rs  binding.rs  engine.rs  error.rs  events.rs  handle.rs  introspection.rs  key.rs  layer.rs  lib.rs  manager.rs
crates/keybound/src/engine/: binding.rs  command.rs  devices.rs  forwarder.rs  key_state.rs  matcher.rs  runtime.rs  types.rs  wake.rs
crates/keybound/tests/: action_binding.rs  error_type.rs  evdev_feature.rs  facade_reexports.rs  key_types.rs  layer_definition.rs  layer_stack.rs  manager_handle.rs  public_api.rs
docs/: api-review-v0.1.0.md  release-readiness-v0.1.0.md
examples/: async_stream.rs  backend_selection.rs  config.toml  config_file.rs  conflict_detection.rs  device_filter.rs  grab.rs  key_state.rs  modes.rs  multi.rs  sequences.rs  simple.rs  string_parsing.rs  tap_hold.rs
src/: action.rs  backend.rs  binding.rs  config.rs  device.rs  engine.rs  error.rs  events.rs  handle.rs  hotkey.rs  introspection.rs  key.rs  key_state.rs  layer.rs  lib.rs  listener.rs  manager.rs  mode.rs  permission.rs  tap_hold.rs
src/backend/: evdev.rs  portal.rs
src/engine/: command.rs  devices.rs  forwarder.rs  key_state.rs  matcher.rs  tap_hold.rs  types.rs
src/listener/: dispatch.rs  forwarding.rs  hotplug.rs  io.rs  sequence.rs  state.rs
src/manager/: callbacks.rs  handles.rs  options.rs  registration.rs
src/mode/: builder.rs  controller.rs  dispatch.rs  options.rs  registry.rs  stack.rs
tests/: action_binding.rs  backend_selection.rs  config_serialization.rs  error_type.rs  integration.rs  key_types.rs  layer_definition.rs  layer_stack.rs  manager_handle.rs  public_api.rs  string_parsing.rs
