[workspace]
members = ["crates/*"]
resolver = "3"

[workspace.package]
edition = "2024"
rust-version = "1.85"
authors = ["Josh Thomas <josh@joshthomas.dev>"]
license-file = "LICENSE"
repository = "https://github.com/joshuadavidthomas/kbd"

[workspace.dependencies]
kbd = { version = "0.1.0", path = "crates/kbd" }
kbd-derive = { path = "crates/kbd-derive" }
kbd-evdev = { version = "0.1.0", path = "crates/kbd-evdev" }
kbd-global = { version = "0.1.0", path = "crates/kbd-global" }
kbd-portal = { path = "crates/kbd-portal" }
kbd-crossterm = { version = "0.1.0", path = "crates/kbd-crossterm" }
kbd-tao = { version = "0.1.0", path = "crates/kbd-tao" }
kbd-winit = { version = "0.1.0", path = "crates/kbd-winit" }
kbd-iced = { version = "0.1.0", path = "crates/kbd-iced" }
kbd-egui = { version = "0.1.0", path = "crates/kbd-egui" }
kbd-xkb = { path = "crates/kbd-xkb" }

crossterm = { version = "0.29", default-features = false, features = ["events"] }
eframe = { version = "0.33", default-features = false, features = ["default_fonts", "glow", "x11", "wayland"] }
egui = { version = "0.33", default-features = false }
iced = { version = "0.14" }
iced_core = { version = "0.14", default-features = false }
tao = { version = "0.34" }
softbuffer = "0.4"
winit = { version = "0.30", default-features = false, features = ["rwh_06", "x11", "wayland"] }
ashpd = { version = "0.13", default-features = false, features = ["async-io"] }
async-channel = { version = "2.3" }
async-std = { version = "1.13" }
evdev = "0.13"
keyboard-types = "0.8"
libc = "0.2"
serde = { version = "1.0", features = ["derive"] }
thiserror = "2.0"
tokio = { version = "1.44", default-features = false, features = ["rt"] }
tracing = "0.1"

# dev
serde_json = "1.0"
toml = "1.0"

[workspace.lints.rust]
missing_docs = "warn"

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
