[workspace]
members = ["crates/*"]
resolver = "3"

[workspace.dependencies]
kbd = { version = "0.1.0", path = "crates/kbd" }
kbd-bench = { path = "crates/kbd-bench" }
kbd-crossterm = { version = "0.1.0", path = "crates/kbd-crossterm" }
kbd-derive = { path = "crates/kbd-derive" }
kbd-egui = { version = "0.1.0", path = "crates/kbd-egui" }
kbd-evdev = { version = "0.1.0", path = "crates/kbd-evdev" }
kbd-global = { version = "0.1.0", path = "crates/kbd-global" }
kbd-iced = { version = "0.1.0", path = "crates/kbd-iced" }
kbd-portal = { path = "crates/kbd-portal" }
kbd-tao = { version = "0.1.0", path = "crates/kbd-tao" }
kbd-winit = { version = "0.1.0", path = "crates/kbd-winit" }
kbd-xkb = { path = "crates/kbd-xkb" }

ashpd = { version = "0.13", default-features = false, features = ["async-io"] }
async-channel = { version = "2.3" }
async-std = { version = "1.13" }
crossterm = { version = "0.29", default-features = false, features = ["events"] }
eframe = { version = "0.33", default-features = false, features = ["default_fonts", "glow", "x11", "wayland"] }
egui = { version = "0.33", default-features = false }
evdev = "0.13"
iced = { version = "0.14" }
iced_core = { version = "0.14", default-features = false }
keyboard-types = "0.8"
libc = "0.2"
serde = { version = "1.0", features = ["derive"] }
softbuffer = "0.4"
tao = { version = "0.34" }
thiserror = "2.0"
tokio = { version = "1.44", default-features = false, features = ["rt"] }
tracing = "0.1"
winit = { version = "0.30", default-features = false, features = ["rwh_06", "x11", "wayland"] }

# dev / bench
divan = { package = "codspeed-divan-compat", version = "4.3" }
serde_json = "1.0"
toml = "1.0"

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }

[workspace.lints.rust]
missing_docs = "warn"

[profile.bench]
debug = 2

[workspace.package]
authors = ["Josh Thomas <josh@joshthomas.dev>"]
edition = "2024"
license-file = "LICENSE"
repository = "https://github.com/joshuadavidthomas/kbd"
rust-version = "1.85"
