[package]
name = "kbd-evdev"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "evdev backend for kbd — Linux input device discovery, hotplug, grab, and event forwarding."
keywords = ["evdev", "keyboard", "input", "linux"]
categories = ["os::linux-apis"]

[dependencies]
evdev = { workspace = true }
kbd-core = { workspace = true }
libc = { workspace = true }
thiserror = { workspace = true }

[lints]
workspace = true
