[package]
name = "kbd-global"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license-file.workspace = true
repository.workspace = true
description = "Global hotkey runtime for kbd — threaded engine, device management, and backend selection for Linux"
keywords = ["hotkey", "global-shortcut", "keybinding", "wayland", "input"]
categories = ["os::linux-apis", "api-bindings"]
readme = "README.md"

[features]
grab = []
serde = ["dep:serde", "kbd/serde"]

[dependencies]
kbd = { workspace = true }
kbd-evdev = { workspace = true }
libc = { workspace = true }
serde = { workspace = true, optional = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
evdev = { workspace = true }
kbd-evdev = { workspace = true, features = ["testing"] }
serde_json = { workspace = true }
toml = { workspace = true }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lints]
workspace = true
