[package]
name = "kbd-iced"
version = "0.1.0"
description = "iced bridge for kbd — converts iced key events and modifiers to kbd types."
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
iced_core.workspace = true
kbd-core.workspace = true

[lints]
workspace = true
