[package]
name = "kbd-iced"
version = "0.1.0"
description = "iced bridge for kbd — converts iced key events and modifiers to kbd types."
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
readme = "../../README.md"
keywords = ["keyboard", "iced", "hotkey", "keybinding"]
categories = ["gui"]

[dependencies]
iced_core.workspace = true
kbd.workspace = true

[dev-dependencies]
iced = { workspace = true }

[lints]
workspace = true
