[package]
name = "kbd-iced"
version = "0.2.0"
description = "iced bridge for kbd — converts iced key events and modifiers to kbd types."
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license-file.workspace = true
repository.workspace = true
readme = "README.md"
keywords = ["keyboard", "iced", "hotkey", "keybinding"]
categories = ["gui"]

[dependencies]
iced_core.workspace = true
kbd.workspace = true

[dev-dependencies]
iced = { workspace = true }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lints]
workspace = true
