[package]
name = "kbd-portal"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "XDG GlobalShortcuts portal backend for kbd — Wayland-friendly, no root needed."
keywords = ["portal", "wayland", "xdg", "keyboard"]
categories = ["os::linux-apis"]

[dependencies]
ashpd = { workspace = true }
kbd-core = { workspace = true }
thiserror = { workspace = true }

[lints]
workspace = true
