[package]
name = "kbd-tao"
version = "0.1.0"
description = "tao bridge for kbd — converts tao key events and modifiers to kbd types."
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license-file.workspace = true
repository.workspace = true
readme = "README.md"
keywords = ["keyboard", "tao", "hotkey", "keybinding"]
categories = ["gui"]

[dependencies]
tao.workspace = true
kbd.workspace = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lints]
workspace = true
