[package]
name = "kbd-winit"
version = "0.1.0"
description = "winit bridge for kbd — converts winit key events and modifiers to kbd types."
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
winit.workspace = true
kbd-core.workspace = true

[lints]
workspace = true
