[package]
name = "kbd-winit"
version = "0.1.0"
description = "winit bridge for kbd — converts winit key events and modifiers to kbd types."
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
readme = "../../README.md"
keywords = ["keyboard", "winit", "hotkey", "keybinding"]
categories = ["gui"]

[dependencies]
winit.workspace = true
kbd.workspace = true

[dev-dependencies]
softbuffer = { workspace = true }

[lints]
workspace = true
