[package]
name = "kbd-xkb"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license-file.workspace = true
repository.workspace = true
description = "Keyboard layout awareness for kbd — xkbcommon integration for keycode-to-keysym resolution and layout change detection."
readme = "README.md"
publish = false
keywords = ["xkb", "keyboard", "layout", "keysym"]
categories = ["os::linux-apis"]

# No dependencies yet.
# Dependencies will include: xkbcommon, kbd

[lints]
workspace = true
