[package]
name = "kbd"
version = "0.2.0"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license-file.workspace = true
repository.workspace = true
readme = "README.md"
description = "Pure-logic hotkey engine — key types, modifier tracking, binding matching, layer stacks, sequence resolution. No platform dependencies."
keywords = ["keyboard", "hotkey", "keybinding", "shortcut"]
categories = ["data-structures"]

[features]
serde = ["dep:serde"]

[dependencies]
keyboard-types = { workspace = true }
serde = { workspace = true, optional = true }
thiserror = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lints]
workspace = true
