[package]
name = "keybound"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Global hotkey library for Linux — works on Wayland, X11, and TTY"
keywords = ["hotkey", "global-shortcut", "keybinding", "wayland", "input"]
categories = ["os::linux-apis", "api-bindings"]
readme = "../../README.md"

[features]
default = ["evdev"]
async-std = ["dep:async-std", "dep:async-channel"]
evdev = ["dep:kbd-evdev"]
grab = ["evdev"]
portal = ["dep:ashpd", "dep:async-std", "dep:kbd-portal"]
serde = ["dep:serde", "kbd-core/serde"]
tokio = ["dep:tokio", "dep:async-channel"]

[dependencies]
ashpd = { workspace = true, optional = true }
async-channel = { workspace = true, optional = true }
async-std = { workspace = true, optional = true }
kbd-core = { workspace = true }
kbd-derive = { workspace = true, optional = true }
kbd-evdev = { workspace = true, optional = true }
kbd-portal = { workspace = true, optional = true }
kbd-xkb = { workspace = true, optional = true }
libc = { workspace = true }
serde = { workspace = true, optional = true }
thiserror = { workspace = true }
tokio = { workspace = true, optional = true }
tracing = { workspace = true }

[dev-dependencies]
evdev = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }

[lints]
workspace = true
